# projet-MIG8110

./: .env_sample  .gitignore  README.md  docker-compose.yml  dockerfile  pdm.toml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: geolocation.csv  sellers.csv
proct_olis/: app.py  essai.ipynb  run.ipynb
proct_olis/core/: __init__.py  config.py  destination.py  reader.py  session.py  source.py  utilities.py  writter.py
proct_olis/datalake/customers/: config.yml  model.py
proct_olis/datalake/order_items/: config.yml  model.py
proct_olis/datalake/order_payments/: config.yml  model.py
proct_olis/datalake/order_reviews/: config.yml  model.py
proct_olis/datalake/orders/: config.yml  model.py
proct_olis/datalake/products/: config.yml  model.py
proct_olis/datalake/sellers/: config.yml  model.py
proct_olis/operations/customer/: config.yml  model.py
proct_olis/operations/location/: config.yml  model.py
proct_olis/operations/order_status_type/: config.yml  model.py
proct_olis/settings/: __init__.py  settings.yml
scripts/: analyse.py  csv_to_postgres.py  entrypoint.sh  load.py  tables_definitions.py
src/proct_olis/: __init__.py
src/proct_olis/etl_extraction/: extact_data.py
src/proct_olis/etl_transactionnel/: load_payment_type.py  load_product_category.py
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfvars  variables.tf
terraform/.terraform/modules/: modules.json
terraform/modules/minio/: buckets.tf  main.tf  policies.tf  source_data.tf  users.tf  variables.tf
terraform/modules/postgres_operations/: main.tf  table_closed_deal.tf  table_customer.tf  table_lead_type.tf  table_location.tf  table_marketing_qualified_lead.tf  table_order.tf  table_order_item.tf  table_order_payment.tf  table_order_review.tf  table_order_status_type.tf  table_ordrer_step.tf  table_origin.tf  table_payment_type.tf  table_product.tf  (+4 more)
