[project]
name = "proct_olis"
version = "1.0"
description = "Default template for PDM package"
authors = [
    {name = "imen-bendai", email = "imen.bendai@outlook.com"},
]
dependencies = ["pandas>=2.3.3", "psycopg2-binary>=2.9.11"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
[dependency-groups]
lint = [
    "ruff",
    "flake8",
    "black"
]
 
dev = [
    "pytest",
    "polars",
    "pandas",
    "minio",
    "requests",
    "s3fs"
]